--- a/glossary.tex
+++ b/glossary.tex
@@ -28,6 +28,7 @@
 \newacronym{lsnd}{LSND}{Liquid Scintillator Neutrino Detector}
 \newacronym{mc}{MC}{Monte Carlo}
 \newacronym{mct}{MCT}{Monte Carlo Template}
+\newacronym{mec}{MEC}{Meson Exchange Current}
 \newacronym{microboone}{MicroBooNE}{Micro Booster Neutrino Experiment}
 \newacronym{miniboone}{MiniBooNE}{Mini Booster Neutrino Experiment}
 \newacronym{minos}{MINOS}{Main Injector Neutrino Oscillation Search}
@@ -39,6 +40,7 @@
 \newacronym{pds}{PDS}{Photon Detection System}
 \newacronym{pmns}{PMNS}{Pontecorvo-Maki-Nakagawa-Sakata}
 \newacronym{pmt}{PMT}{Photo Multiplier Tube}
+\newacronym{pot}{POT}{Protons-On-Target}
 \newacronym{sage}{SAGE}{Soviet-American Gallium Experiment}
 \newacronym{sbn}{SBN}{Short Baseline Neutrino}
 \newacronym{sbnd}{SBND}{Short Baseline Near Detector}
