--- a/chap6-valor_analysis.tex
+++ b/chap6-valor_analysis.tex
@@ -58,21 +58,56 @@ In the limit of many samples, the quantity $-2ln~\lambda_{d;b;s}(\vec \theta, \v
 
 \textcolor{red}{Lots of other shit I don't really understand.}
 
+\section{Systemtic Uncertainty Validation}
 
-\section{\texorpdfstring{$\nu_\mu$ Disappearance Analysis}{numu Disappearance Analysis}}
-\section{\texorpdfstring{$\nu_e$ Appearance Analysis}{nue Appearance Analysis}}
-
-\begin{comment}
+\textcolor{red}{EXPLAIN WHY EVENT RATE IS HUGE COMPARED TO NORMAL SPECTRA}
 
 \begin{figure}
     \centering
-    \includegraphics[clip, trim=0.1cm 12cm 3.5cm 3.7cm, width=\largefigwidth]{figures-chap6/event_rate_tables/nue_nominal_event_rate_table.pdf}
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_nsigma_nue/horncurrent_FluxUnisim_nuelikeCChigh_1sigma_horncurrent_FluxUnisim.png}
+    \caption[+1$\sigma$ variation comparison for the horncurrent\_FluxUnisim parameter.]{A comparison of the +1$\sigma$ variation from the response functions in VALOR and the universes for the 'horncurrent\_FluxUnisim' flux systematic parameter.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_flux_uncorr.pdf}
     \caption{Caption}
     \label{fig:my_label}
 \end{figure}
 
-\end{comment}
 
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_nsigma_nue/genie_ccresAxial_Genie_nuelikeCChigh_1sigma_genie_ccresAxial_Genie.png}
+    \caption[+1$\sigma$ variation comparison for the genie\_ccresAxial\_Genie parameter.]{A comparison of the +1$\sigma$ variation from the response functions in VALOR and the universes for the 'genie\_ccresAxial\_Genie' proposal interaction systematic parameter.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_proposal_xsec.pdf}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_nsigma_nue/genie_ResDecayGamma_Genie_nuelikeCChigh_1sigma_genie_ResDecayGamma_Genie.png}
+    \caption[+1$\sigma$ variation comparison for the genie\_ResDecayGamma\_Genie parameter.]{A comparison of the +1$\sigma$ variation from the response functions in VALOR and the universes for the 'genie\_ResDecayGamma\_Genie' modern interaction systematic parameter.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_modern_xsec.pdf}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
+
+\section{\texorpdfstring{$\nu_\mu$ Disappearance Analysis}{numu Disappearance Analysis}}
+\newpage
+\section{\texorpdfstring{$\nu_e$ Appearance Analysis}{nue Appearance Analysis}}\label{sec:nue_app}
 
 \newpage
 \section*{sbn\_nd\_\_BNB\_FHC\_\_nuelikeCChigh}
@@ -277,11 +312,13 @@ POT: 6.600E20
   }
 \end{figure}
 
+\textcolor{red}{SPECTRA WITH OSCILLATED OVERLAY. I GUESS THE SAME PARAMS AS USED FOR THE RATIOS BELOW}
+
 The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the $\nue$ appearance stat only exclusion contour and allowed region. The injected point $\Delta m^2_{41} = 1.32$ eV$^2$, $sin^22\theta_{\mu e} = 0.003$, used when producing the allowed region is shown along with two further points on the exclusion contour at $\Delta m^2_{41} = 1$ eV$^2$, $sin^22\theta_{\mu e} = 0.0014$ and $\Delta m^2_{41} = 100$ eV$^2$, $sin^22\theta_{\mu e} = 0.0005$. $\nue$ appearance spectra are produced using oscillation parameters corresponding to each of these three points for each of the three SBN detectors. The ratio of each of these oscillated spectra to the nominal for each detector are shown in the the remaining plots in Figure~\ref{fig:Nue_app_spectra_ratios} and highlight the expected oscillation signal.
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = 0.49\textwidth]{images/Appearance/overlays/nue_app_stat_osc_markers.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/overlays/nue_app_stat_osc_markers.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_app_spectra_ratio_sbnd.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_app_spectra_ratio_ub.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_app_spectra_ratio_icarus.pdf}
@@ -289,14 +326,33 @@ The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the $\nue$ ap
     \label{fig:Nue_app_spectra_ratios}
 \end{figure}
 
-
-\section{\texorpdfstring{$\nu_e$ Disappearance Analysis}{nue Disappearance Analysis}}
-
-
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_app_detector_combinations_stat_only.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_app_detector_combinations_stat+syst.pdf}
+    \caption{Contributions to the SBN $\nu_e$ appearance sterile oscillation sensitivity from each detector and combinations of detectors in the SBN programme produced by the VALOR fitting framework. The statistical-only plots in the left-hand figure show that SBND is most sensitive to the region $\Delta m_{41}^{2} >$ $\sim$3 eV$^{2}$and ICARUS is most sensitive to $\Delta m_{41}^{2} <$ $\sim$3 eV$^{2}$. The right-hand figure includes flux and interaction systematic parameters and highlights the considerable improvement in the oscillation sensitivity when including multiple detectors in the fits.}
+    \label{fig:my_label}
+\end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = 0.49\textwidth]{images/Nue_Disappearance/overlays/nue_disapp_stat_osc_markers.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_app_syst_groups.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_app_syst_groups_ratios.pdf}
+    \caption{The left plot shows the reduction in sensitivity from the stat-only contour when including each set of systematic parameters in the fits and was produced by the VALOR fitting framework. The right plot shows the relative location of each systematic contour in $\sin^{2}2\theta_{\mu e}$ space, with respect to the statistical-only case for the active region of $\Delta m_{41}^{2}$ phase space.}
+    \label{fig:my_label}
+\end{figure}
+
+
+
+
+\clearpage
+\section{\texorpdfstring{$\nu_e$ Disappearance Analysis}{nue Disappearance Analysis}}
+
+Nominal event rate tables and spectra are the same as shown in \SectionRef{sec:nue_app}.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/overlays/nue_disapp_stat_osc_markers.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_disapp_spectra_ratio_sbnd.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_disapp_spectra_ratio_ub.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_disapp_spectra_ratio_icarus.pdf}
@@ -305,29 +361,26 @@ The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the $\nue$ ap
 \end{figure}
 
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_disapp_detector_combinations_stat-only.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_disapp_detector_combinations_stat+syst.pdf}
+    \caption{Contributions to the SBN $\nu_e$ disappearance sterile oscillation sensitivity from each detector and combinations of detectors in the SBN programme produced by the VALOR fitting framework. The statistical-only plots in the left-hand figure show that SBND is most sensitive to the region $\Delta m_{41}^{2} > 3$~eV$^{2}$ and ICARUS is most sensitive below $\Delta m_{41}^{2} < 3$~eV$^{2}$. The right-hand figure includes flux and interaction systematic parameters and highlights the considerable improvement in the oscillation sensitivity when including multiple detectors in the fits.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_disapp_syst_groups.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/nue_disapp_syst_groups_ratios.pdf}
+    \caption{The left plot shows the reduction in sensitivity from the stat-only contour when including each set of systematic parameters in the fits and was produced by the VALOR fitting framework. The right plot shows the relative location of each systematic contour in $\sin^{2}2\theta_{\mu e}$ space, with respect to the statistical-only case for the active region of $\Delta m_{41}^{2}$ phase space.}
+    \label{fig:my_label}
+\end{figure}
+
+
+
+\clearpage
 \section{Additional Efficiency and Energy Scale Systematics}
 
-\begin{table}[]
-\begin{adjustbox}{width=\textwidth,center}
-	\begin{tabular}{l lllll}
-		\hline
-		& \multicolumn{5}{c}{\textbf{Applies to}}                                                                                  \\
-		\textbf{Systematic}    & \textbf{Beam} & \textbf{Detector} & \textbf{Sample}        & \textbf{Mode} & \textbf{Reco. energy bin edges}                            \\ \hline
-		$f_0 - f_7$   & FHC  & SBND     & $\nu_{\mu}$CC-like & signal/$\nu_{\mu}$CC & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, 1.5, 2.0, $\infty$\}      \\
-		$f_8 - f_{13}$    & FHC  & SBND     & $\nu_{\mu}$CC-like   & bkg/NC               & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, $\infty$\}                \\
-		$f_{14}$          & FHC  & SBND     & $\nu_{\mu}$CC-like   & bkg/Dirt             & \{0, $\infty$\}                                         \\
-		$f_{15}$          & FHC  & SBND     & $\nu_{\mu}$CC-like   & bkg/Cosmics          & \{0, $\infty$\}                                         \\ \hline
-		$f_{16}-f_{24}$     & FHC  & SBND     & $\nu_{e}$CC-like     & signal/$\nu_{e}$CC     & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, 1.5, 2.0, 3.0, $\infty$\} \\
-		$f_{25} - f_{33}$   & FHC  & SBND     & $\nu_{e}$CC-like     & bkg/$\nu_{\mu}$CC      & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, 1.5, 2.0, 3.0, $\infty$\} \\
-		$f_{34} - f_{42}$   & FHC  & SBND     & $\nu_{e}$CC-like     & bkg/NC1$\gamma$        & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, 1.5, 2.0, 3.0, $\infty$\} \\
-		$f_{43} - {f_51}$   & FHC  & SBND     & $\nu_{e}$CC-like     & bkg/NC1$\pi^0$         & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, 1.5, 2.0, 3.0, $\infty$\} \\
-		$f_{52} - f_{60}$   & FHC  & SBND     & $\nu_{e}$CC-like     & bkg/NCother          & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, 1.5, 2.0, 3.0, $\infty$\} \\
-		$f_{61} - f_{66}$   & FHC  & SBND     & $\nu_{e}$CC-like     & bkg/Dirt             & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, $\infty$\}                \\
-		$f_{67} - f_{72}$   & FHC  & SBND     & $\nu_{e}$CC-like     & bkg/Cosmics          & \{0, 0.2, 0.4, 0.6, 0.8, 1.0, $\infty$\}                \\ \hline
-		$f_{73} - f_{145}$  & \multicolumn{5}{l}{As above, but for $\mu$B}                                                                        \\ \hline
-		$f_{146} - f_{218}$ & \multicolumn{5}{l}{As above, but for ICARUS}                                                                    \\ \hline
-	\end{tabular}
-\end{adjustbox}
-\end{table}
 
 
